# cherish

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  README.md  _config.yml  combo.css  index.html  manual.md
_includes/: footer.md
_layouts/: default.html  page.html
_posts/: 2014-01-01-intro.md  2014-11-01-intro.md  2014-11-02-products.md  2014-11-03-bands.md  2014-11-04-archive.md  2014-11-05-contact.md  2016-01-01-intro.md  (+7 more)
doc/: _todo.md  (+5 more)
src/: CMakeLists.txt  axes.cpp  axes.h  canvas.cpp  canvas.h  dureuapplication.cpp  dureuapplication.h  mainwindow.cpp  mainwindow.h  settings.h  viewwidget.cpp  viewwidget.h
src/cherish/: CMakeLists.txt  Data.cpp  Data.h  ScalingGui.cpp  ScalingGui.h  Settings.h  Utilities.cpp  Utilities.h  main.cpp
src/cherish/Icons/: Actions.qrc  Actions.qrc.autosave
src/cherish/Images/: Actions.qrc  Icons.qrc
src/cherish/Shaders/: LineSegment.frag  Polygon.frag  Stroke.frag  Stroke.geom  Stroke.glsl  Stroke.vert  shaderfiles.qrc
src/cherish/Styles/: Stylesheets.qrc
src/cmake/: FindEigen3.cmake
src/demo-osg/: CMakeLists.txt  main.cpp
src/demo-qtosg/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  osgwidget.cpp  osgwidget.h  pickhandler.cpp  tabletapplication.cpp  tabletapplication.h
src/demo-win/: demo-win.pro  examplewindow.h  graphicswindow.cpp  graphicswindow.h  main.cpp
src/demos/demo-osg/: CMakeLists.txt  main.cpp
src/demos/demo-osg-shader/: CMakeLists.txt  osg_demo.cpp  points-lines.cpp
src/demos/demo-qdesktop/: demo-qdesktop.pro  main.cpp  mainwindow.cpp  mainwindow.h
src/demos/demo-qt/: CMakeLists.txt  qt.cpp
src/demos/demo-qt5.4/: demo-win.pro  examplewindow.h  graphicswindow.h  main.cpp
src/demos/demo-qtosg/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  osgwidget.cpp  osgwidget.h  pickhandler.h  qtosg.cpp  tabletapplication.cpp
src/dureu3d/: CMakeLists.txt  Data.cpp  Data.h  Settings.h  Utilities.cpp  Utilities.h  logfilehandler.h  main.cpp  settings.h
src/dureu3d/Data/: Actions.qrc  All icons.rar  Icons.qrc
src/dureu3d/Icons/: Icons-2x.qrc  Icons.qrc
src/dureu3d/Shaders/: Stroke.frag  Stroke.vert
src/dureu3d/Styles/: CanvasWidget.qss
src/dureu3d/Widgets/: MainWindow.ui
src/dureu3d/icons/: image.qrc
src/gui/: CMakeLists.txt  viewwidget.cpp
src/icons/: image.qrc
src/libGUI/: Actions.cpp  Actions.h  BookmarkDelegate.cpp  BookmarkDelegate.h  BookmarkWidget.cpp  BookmarkWidget.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CameraProperties.cpp  CameraProperties.h  CanvasWidget.cpp  CanvasWidget.h  CherishApplication.cpp  CherishApplication.h  DureuApplication.cpp  DureuApplication.h  FixedSpinBox.cpp  FixedSpinBox.h  GLWidget.cpp  GLWidget.h  ListDelegate.cpp  ListDelegate.h  ListView.cpp  ListView.h  ListWidget.cpp  ListWidget.h  MainWindow.cpp  MainWindow.h  PhotoModel.cpp  PhotoModel.h  TreeWidget.cpp  TreeWidget.h  bookmarkwidget.cpp  bookmarkwidget.h  canvasinfomodel.cpp  canvasinfomodel.h  dureuapplication.cpp  glwidget.cpp  glwidget.h  (+7 more)
src/libGUI/Widgets/: CMainWindow.ui  CameraProperties.ui  MainWindow-prototype.ui  MainWindow.ui  MainWindowUI.ui  QtOSGWindow.ui  QtSGViewer.ui  messageform.ui
src/libNumerics/: CMakeLists.txt  HomographyMatrix.cpp  HomographyMatrix.h  PathFitter.cpp  PathFitter.h
src/libNumerics/libHomogrpahy/: CMakeLists.txt  Hmatrix.h  LM.h  SVD.h  alternatives.h  matrix.cpp  matrix.h  vector.cpp
src/libSG/: CMakeLists.txt  axes.h  canvas.cpp  canvas.h  findnodevisitor.cpp  findnodevisitor.h  rootscene.cpp  rootscene.h  stroke.cpp  stroke.h
src/libSGControls/: AddCanvasCommand.cpp  AddCanvasCommand.h  AddEntityCommand.cpp  AddEntityCommand.h  AddPhotoCommand.cpp  AddPhotoCommand.h  AddStrokeCommand.cpp  AddStrokeCommand.h  BookmarkToolIntersector.cpp  BookmarkToolIntersector.h  CMakeLists.txt  CameraCallbacks.cpp  CameraCallbacks.h  CameraEyeCallback.cpp  CameraEyeCallback.h  CanvasNormalProjector.cpp  CanvasNormalProjector.h  CanvasTransformCallback.cpp  CanvasTransformCallback.h  DeleteStrokeCommand.cpp  DeleteStrokeCommand.h  EditCanvasCommand.cpp  EditCanvasCommand.h  EditEntityCommand.cpp  EditEntityCommand.h  EditPhotoCommand.cpp  EditPhotoCommand.h  EditStrokeCommand.cpp  EditStrokeCommand.h  Entity2DIntersector.h  EventHandler.cpp  EventHandler.h  LineIntersector.cpp  LineIntersector.h  LogFileHandler.h  Manipulator.cpp  Manipulator.h  ModelViewProjectionMatrixCallback.cpp  ModelViewProjectionMatrixCallback.h  MouseMode.cpp  (+40 more)
src/libSGEntities/: Bookmarks.cpp  Bookmarks.h  CMakeLists.txt  CamPoseData.cpp  CamPoseData.h  Canvas.cpp  Canvas.h  ConstructionTool.cpp  ConstructionTool.h  DraggableWire.cpp  DraggableWire.h  EditableWire.cpp  EditableWire.h  Entity2D.cpp  Entity2D.h  LineSegment.cpp  LineSegment.h  Photo.cpp  Photo.h  Polygon.cpp  Polygon.h  ProtectedGroup.h  RootScene.cpp  RootScene.h  SVMData.cpp  SVMData.h  SceneState.cpp  SceneState.h  SelectedGroup.cpp  SelectedGroup.h  ShaderedEntity2D.cpp  ShaderedEntity2D.h  Stroke.cpp  Stroke.h  Tool.cpp  Tool.h  ToolGlobal.cpp  ToolGlobal.h  ToolLocal.cpp  ToolLocal.h  (+15 more)
src/libSGUtils/: AddGroupCommand.cpp  AddGroupCommand.h  CMakeLists.txt  CameraChangeCallback.cpp  CameraChangeCallback.h  FindNodeVisitor.cpp  FindNodeVisitor.h  ObserveBookmarkCallback.cpp  ObserveBookmarkCallback.h  ObserveSceneCallback.cpp  ObserveSceneCallback.h  findnodevisitor.cpp  findnodevisitor.h  logfilehandler.h  observescenecallback.cpp  observescenecallback.h
src/old/: canvas.cpp  dureuapplication.cpp  scenegraph.h  settings.h  viewwidget.h
src/scenegraph/: CMakeLists.txt  axes.cpp  canvas.h  scenegraph.cpp
src/tests/: BaseGuiTest.cpp  BaseGuiTest.h  BaseTest.cpp  BaseTest.h  BookmarksTest.cpp  BookmarksTest.h  CMakeLists.txt  CanvasPhotoWidgetTest.cpp  CanvasPhotoWidgetTest.h  CanvasTest.cpp  CanvasTest.h  MainWindowTest.cpp  MainWindowTest.h  PolygonTest.cpp  PolygonTest.h  SceneStateTest.cpp  SceneStateTest.h  StrokeTest.cpp  StrokeTest.h  UserSceneTest.cpp  UserSceneTest.h  rootscenetest.cpp  rootscenetest.h  test_rootscene.cpp  test_rootscene.h
test/unit/: CMakeLists.txt  foo.cpp
(+50 files in other folders)
